--- a/My_Project_dotNET/Views/Question/QuestionList.cshtml
+++ b/My_Project_dotNET/Views/Question/QuestionList.cshtml
@@ -138,7 +138,7 @@
                         <td>@row["IsActive"]</td>
                         <td>@row["UserName"]</td>
                         <td>
-                            <a asp-controller="Question" asp-action="QuestionDelete" asp-route-QuestionID="@row["QuestionID"]"
+                            <a asp-controller="Question" asp-action="AddQuestion" asp-route-QuestionID="@row["QuestionID"]"
                                class="my-1 btn btn-outline-success btn-xs" data-bs-toggle="tooltip" title="Edit">
                                 <i class="bi bi-pencil-fill"></i>
                             </a>
