--- a/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
+++ b/My_Project_dotNET/Views/QuestionLevel/AddQuestionLevel.cshtml
@@ -62,11 +62,24 @@
             <div class="row mb-3">
                 <hr />
             </div>
+            @if (Model != null && Model.QuestionLevelID > 0)
+            {
+                <input type="hidden" asp-for="QuestionLevelID" />
+            }
             <div class="row mb-3">
                 <label asp-for="QuestionLevel" for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Question Level</label>
                 <div class="col-sm">
                     <input asp-for="QuestionLevel" type="text" class="form-control" id="inputText" placeholder="Enter Question level">
                     <span asp-validation-for="QuestionLevel" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label asp-for="UserID" class="col-sm-3 col-form-label"><span class="text-danger">*</span>User</label>
+                <div class="col-sm">
+                    <select asp-for="UserID" class="form-control" asp-items="@(new SelectList(ViewBag.UserList, "UserID", "UserName"))">
+                        <option value="">Select User</option>
+                    </select>
+                    <span asp-validation-for="UserID" class="text-danger"></span>
                 </div>
             </div>
             <div class="text-center">
@@ -88,7 +101,9 @@
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
-
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 </body>
 
 </html>
