--- a/My_Project_dotNET/Views/User/UserList.cshtml
+++ b/My_Project_dotNET/Views/User/UserList.cshtml
@@ -59,6 +59,7 @@
             </div>
             <div class="col-sm-6 d-flex justify-content-end">
                 <div class="mx-1"><a class="btn btn-primary" href="@Url.Action("Register","User")">Add User</a></div>
+                <div class="mx-1"><a class="btn btn-success" href="@Url.Action("ExportToExcel","User")">Download ExcelSheet</a></div>
             </div>
         </div>
         <div class="row mb-3">
