--- a/My_Project_dotNET/Views/Quiz/QuizList.cshtml
+++ b/My_Project_dotNET/Views/Quiz/QuizList.cshtml
@@ -98,6 +98,7 @@
             </div>
             <div class="col-sm-6 d-flex justify-content-end">
                 <div class="mx-1"><a class="btn btn-primary" href="@Url.Action("AddQuiz","Quiz")">Add Quiz</a></div>
+                <div class="mx-1"><a class="btn btn-success" href="@Url.Action("ExportQuizzesToExcel","Quiz")">Download ExcelSheet</a></div>
             </div>
         </div>
         <div class="row mb-3">
