--- a/My_Project_dotNET/Views/Question/QuestionList.cshtml
+++ b/My_Project_dotNET/Views/Question/QuestionList.cshtml
@@ -102,6 +102,7 @@
             </div>
             <div class="col-sm-6 d-flex justify-content-end">
                 <div class="mx-1"><a class="btn btn-primary" href="@Url.Action("AddQuestion","Question")">Add Question</a></div>
+                <div class="mx-1"><a class="btn btn-success" href="@Url.Action("ExportQuestionsToExcel","Question")">Download ExcelSheet</a></div>
             </div>
         </div>
         <div class="row mb-3">
